appserver/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: chirpstack-application-server
  namespace: chirpstack
  labels:
    app: chirpstack-application-server
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: chirpstack-application-server
  template:
    metadata:
      labels:
        app: chirpstack-application-server
    spec:
      containers:
        - name: chirpstack-application-server
          image: chirpstack/chirpstack-application-server:3.11.1
          readinessProbe:
            httpGet:
              path: /health
              port: 8101
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
          ports:
            - name: ui-port
              containerPort: 8080
            - name: join-port
              containerPort: 8003
            - name: http-port
              containerPort: 8001
            - name: monitoring-port
              containerPort: 8101
          resources:
            limits:
              cpu: "3"
              memory: 1500Mi
            requests:
              cpu: "2"
              memory: 750Mi
          volumeMounts:
            - name: chirpstack-application-server
              mountPath: /.config/chirpstack-application-server/chirpstack-application-server.toml
              subPath: chirpstack-application-server.toml
      volumes:
        - name: chirpstack-application-server
          configMap:
            name: chirpstack-application-server
